--- a/index.html
+++ b/index.html
@@ -9,32 +9,6 @@
 </head>
 <body>
   <div id="app">
-    <header class="header">
-      <h1>Music Practice</h1>
-      <div class="controls">
-        <button id="load-file-btn" class="btn btn-primary">Load MusicXML</button>
-        <button id="clear-file-btn" class="btn" style="display: none;">Clear Score</button>
-        <select id="midi-device-select" class="select" disabled>
-          <option value="">No MIDI device</option>
-        </select>
-        <select id="practice-mode-select" class="select">
-          <option value="both">Both Hands</option>
-          <option value="right">Right Hand Only</option>
-          <option value="left">Left Hand Only</option>
-        </select>
-        <select id="zoom-select" class="select">
-          <option value="0.8">Small</option>
-          <option value="1.0" selected>Normal</option>
-          <option value="1.5">Large</option>
-        </select>
-        <select id="keyboard-size-select" class="select">
-          <option value="100" selected>Normal</option>
-          <option value="135">Large</option>
-          <option value="0">Hide</option>
-        </select>
-      </div>
-    </header>
-
     <main class="main">
       <div class="score-container">
         <div id="score-display"></div>
@@ -42,12 +16,57 @@
       </div>
 
       <div class="practice-panel">
+        <button id="toggle-panel-btn" class="toggle-panel-btn">◀</button>
+        
+        <div class="panel-content">
+          <h1>Piano Play Along</h1>
+          
+          <div class="file-controls">
+            <button id="load-file-btn" class="btn btn-primary">Load MusicXML</button>
+            <button id="clear-file-btn" class="btn" style="display: none;">Clear Score</button>
+          </div>
+
+          <div class="settings-section">
+            <h3>Settings</h3>
+            <div class="settings-content">
+              <div class="setting-item">
+                <label for="midi-device-select">MIDI Device</label>
+                <select id="midi-device-select" class="select" disabled>
+                  <option value="">No MIDI device</option>
+                </select>
+              </div>
+              <div class="setting-item">
+                <label for="practice-mode-select">Practice Mode</label>
+                <select id="practice-mode-select" class="select">
+                  <option value="both">Both Hands</option>
+                  <option value="right">Right Hand Only</option>
+                  <option value="left">Left Hand Only</option>
+                </select>
+              </div>
+              <div class="setting-item">
+                <label for="zoom-select">Score Zoom</label>
+                <select id="zoom-select" class="select">
+                  <option value="0.8">Small</option>
+                  <option value="1.0" selected>Normal</option>
+                  <option value="1.5">Large</option>
+                </select>
+              </div>
+              <div class="setting-item">
+                <label for="keyboard-size-select">Keyboard Size</label>
+                <select id="keyboard-size-select" class="select">
+                  <option value="100" selected>Normal</option>
+                  <option value="135">Large</option>
+                  <option value="0">Hide</option>
+                </select>
+              </div>
+            </div>
+          </div>
         <div class="practice-controls">
           <button id="pause-btn" class="btn btn-warning" disabled>Pause</button>
           <button id="reset-btn" class="btn" disabled>Back to Start</button>
-        </div>
+          </div>
 
-        <div class="status-panel">
+          <div class="status-panel">
           <div class="status-item">
             <span class="label">Measure:</span>
             <span id="current-measure">-</span>
@@ -60,9 +79,9 @@
             <span class="label">Next Notes:</span>
             <span id="next-notes">-</span>
           </div>
-        </div>
+          </div>
 
-        <div class="midi-status">
+          <div class="midi-status">
           <div class="status-indicator" id="midi-status">
             <span class="dot"></span>
             <span id="midi-status-text">MIDI: Not connected</span>
@@ -71,9 +90,9 @@
             <span class="dot"></span>
             <span id="voice-status-text">Voice: Listening</span>
           </div>
-        </div>
+          </div>
 
-        <div class="voice-commands">
+          <div class="voice-commands">
           <h3>Voice Commands</h3>
           <ul>
             <li><strong>measure 4 / bar 4</strong> - jump to measure</li>
@@ -84,6 +103,7 @@
             <li><strong>mute</strong> - ignore commands</li>
             <li><strong>unmute</strong> - listen again</li>
           </ul>
+          </div>
         </div>
       </div>
     </main>
