--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
               <div class="setting-item">
                 <label for="zoom-select">Score Zoom</label>
                 <select id="zoom-select" class="select">
-                  <option value="0.8">Small</option>
-                  <option value="1.0" selected>Normal</option>
+                  <option value="0.8">X. Small</option>
+                  <option value="1.0">Small</option>
+                  <option value="1.25" selected>Normal</option>
                   <option value="1.5">Large</option>
+                  <option value="1.75">X. Large</option>
                 </select>
               </div>
               <div class="setting-item">
@@ -58,6 +60,10 @@
                   <option value="135">Large</option>
                   <option value="0">Hide</option>
                 </select>
+              </div>
+              <div class="setting-item">
+                <label for="show-note-names">Show Note Names</label>
+                <input type="checkbox" id="show-note-names">
               </div>
             </div>
           </div>
