--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
     <main class="main">
       <div class="score-container">
         <div id="score-display"></div>
-        <div id="loading-message" class="message">Load a MusicXML file to begin</div>
+        <div id="loading-message" class="message">
+          <h2>Load a MusicXML file</h2>
+          <div class="score-library">
+            <div class="folder">
+              <div class="folder-name">Final Fantasy VII Piano Collections</div>
+              <div class="folder-contents">
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-01-Tifas-Theme.mxl">01 - Tifa's Theme</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-02-Main-Theme.mxl">02 - Main Theme</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-03-Cinco-de-Chocobo.mxl">03 - Cinco de Chocobo</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-04-Ahead-on-Our-Way.mxl">04 - Ahead on Our Way</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-05-Fighting.mxl">05 - Fighting</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-06-Cosmo-Canyon.mxl">06 - Cosmo Canyon</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-07-Gold-Saucer.mxl">07 - Gold Saucer</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-08-Farm-Boy.mxl">08 - Farm Boy</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-09-Rufus-Welcoming-Ceremony.mxl">09 - Rufus Welcoming Ceremony</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-10-J-E-N-O-V-A.mxl">10 - J-E-N-O-V-A</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-11-Aeriths-Theme.mxl">11 - Aerith's Theme</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-12-One-Winged-Angel.mxl">12 - One Winged Angel</div>
+                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-13-Descendent-of-Shinobi.mxl">13 - Descendent of Shinobi</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="practice-panel">
@@ -22,8 +44,8 @@
           <h1>Piano Play Along</h1>
           
           <div class="file-controls">
-            <button id="load-file-btn" class="btn btn-primary">Load MusicXML</button>
-            <button id="clear-file-btn" class="btn" style="display: none;">Clear Score</button>
+            <button id="load-file-btn" class="btn btn-primary">Upload MusicXML</button>
+            <button id="clear-file-btn" class="btn" style="display: none;">Close Score</button>
           </div>
 
           <div class="settings-section">
