Add alicia clair obscur score

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-13-Descendent-of-Shinobi.mxl">13 - Descendent of Shinobi</div>
               </div>
             </div>
+            <div class="folder">
+              <div class="folder-name">Expedition 33 Clair Obscur</div>
+              <div class="folder-contents">
+                <div class="score-item" data-path="/scores/expedition 33 clair obscur/alicia - clair obscur.mxl">Alicia</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
