Relative path scores

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
             <div class="folder">
               <div class="folder-name">Final Fantasy VII Piano Collections</div>
               <div class="folder-contents">
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-01-Tifas-Theme.mxl">01 - Tifa's Theme</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-02-Main-Theme.mxl">02 - Main Theme</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-03-Cinco-de-Chocobo.mxl">03 - Cinco de Chocobo</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-04-Ahead-on-Our-Way.mxl">04 - Ahead on Our Way</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-05-Fighting.mxl">05 - Fighting</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-06-Cosmo-Canyon.mxl">06 - Cosmo Canyon</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-07-Gold-Saucer.mxl">07 - Gold Saucer</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-08-Farm-Boy.mxl">08 - Farm Boy</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-09-Rufus-Welcoming-Ceremony.mxl">09 - Rufus Welcoming Ceremony</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-10-J-E-N-O-V-A.mxl">10 - J-E-N-O-V-A</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-11-Aeriths-Theme.mxl">11 - Aerith's Theme</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-12-One-Winged-Angel.mxl">12 - One Winged Angel</div>
-                <div class="score-item" data-path="/scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-13-Descendent-of-Shinobi.mxl">13 - Descendent of Shinobi</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-01-Tifas-Theme.mxl">01 - Tifa's Theme</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-02-Main-Theme.mxl">02 - Main Theme</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-03-Cinco-de-Chocobo.mxl">03 - Cinco de Chocobo</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-04-Ahead-on-Our-Way.mxl">04 - Ahead on Our Way</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-05-Fighting.mxl">05 - Fighting</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-06-Cosmo-Canyon.mxl">06 - Cosmo Canyon</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-07-Gold-Saucer.mxl">07 - Gold Saucer</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-08-Farm-Boy.mxl">08 - Farm Boy</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-09-Rufus-Welcoming-Ceremony.mxl">09 - Rufus Welcoming Ceremony</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-10-J-E-N-O-V-A.mxl">10 - J-E-N-O-V-A</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-11-Aeriths-Theme.mxl">11 - Aerith's Theme</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-12-One-Winged-Angel.mxl">12 - One Winged Angel</div>
+                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-13-Descendent-of-Shinobi.mxl">13 - Descendent of Shinobi</div>
               </div>
             </div>
             <div class="folder">
               <div class="folder-name">Expedition 33 Clair Obscur</div>
               <div class="folder-contents">
-                <div class="score-item" data-path="/scores/expedition 33 clair obscur/alicia - clair obscur.mxl">Alicia</div>
+                <div class="score-item" data-path="scores/expedition 33 clair obscur/alicia - clair obscur.mxl">Alicia</div>
               </div>
             </div>
           </div>
