Add verso score

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <div class="folder-name">Expedition 33 Clair Obscur</div>
               <div class="folder-contents">
                 <div class="score-item" data-path="scores/expedition 33 clair obscur/alicia - clair obscur.mxl">Alicia</div>
+                <div class="score-item" data-path="scores/expedition 33 clair obscur/verso - clair obscur.mxl">Verso</div>
               </div>
             </div>
           </div>
