Add mario score

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <div class="score-item" data-path="scores/expedition 33 clair obscur/verso - clair obscur.mxl">Verso</div>
               </div>
             </div>
+            <div class="folder">
+              <div class="folder-name">Misc</div>
+              <div class="folder-contents">
+                <div class="score-item" data-path="scores/misc/super-mario-bros-ost.mxl">Super Mario Bros Collection</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
