--- a/index.html
+++ b/index.html
@@ -164,38 +164,109 @@
             </div>
           </div>
           <div class="score-library">
-            <div class="folder">
-              <div class="folder-name">Final Fantasy VII Piano Collections</div>
-              <div class="folder-contents">
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-01-Tifas-Theme.mxl">01 - Tifa's Theme</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-02-Main-Theme.mxl">02 - Main Theme</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-03-Cinco-de-Chocobo.mxl">03 - Cinco de Chocobo</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-04-Ahead-on-Our-Way.mxl">04 - Ahead on Our Way</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-05-Fighting.mxl">05 - Fighting</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-06-Cosmo-Canyon.mxl">06 - Cosmo Canyon</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-07-Gold-Saucer.mxl">07 - Gold Saucer</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-08-Farm-Boy.mxl">08 - Farm Boy</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-09-Rufus-Welcoming-Ceremony.mxl">09 - Rufus Welcoming Ceremony</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-10-J-E-N-O-V-A.mxl">10 - J-E-N-O-V-A</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-11-Aeriths-Theme.mxl">11 - Aerith's Theme</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-12-One-Winged-Angel.mxl">12 - One Winged Angel</div>
-                <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-13-Descendent-of-Shinobi.mxl">13 - Descendent of Shinobi</div>
+            <div class="score-column">
+              <!-- Column 1: Collections -->
+              <div class="folder">
+                <div class="folder-name">Final Fantasy VII Piano Collections</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-01-Tifas-Theme.mxl">01 - Tifa's Theme</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-02-Main-Theme.mxl">02 - Main Theme</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-03-Cinco-de-Chocobo.mxl">03 - Cinco de Chocobo</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-04-Ahead-on-Our-Way.mxl">04 - Ahead on Our Way</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-05-Fighting.mxl">05 - Fighting</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-06-Cosmo-Canyon.mxl">06 - Cosmo Canyon</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-07-Gold-Saucer.mxl">07 - Gold Saucer</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-08-Farm-Boy.mxl">08 - Farm Boy</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-09-Rufus-Welcoming-Ceremony.mxl">09 - Rufus Welcoming Ceremony</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-10-J-E-N-O-V-A.mxl">10 - J-E-N-O-V-A</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-11-Aeriths-Theme.mxl">11 - Aerith's Theme</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-12-One-Winged-Angel.mxl">12 - One Winged Angel</div>
+                  <div class="score-item" data-path="scores/final fantasy vii piano collections/final-fantasy-vii-piano-collections-13-Descendent-of-Shinobi.mxl">13 - Descendent of Shinobi</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Expedition 33 Clair Obscur</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/expedition 33 clair obscur/alicia - clair obscur.mxl">Alicia</div>
+                  <div class="score-item" data-path="scores/expedition 33 clair obscur/verso - clair obscur.mxl">Verso</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Misc</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/misc/super-mario-bros-ost.mxl">Super Mario Bros Collection</div>
+                </div>
               </div>
             </div>
-            <div class="folder">
-              <div class="folder-name">Expedition 33 Clair Obscur</div>
-              <div class="folder-contents">
-                <div class="score-item" data-path="scores/expedition 33 clair obscur/alicia - clair obscur.mxl">Alicia</div>
-                <div class="score-item" data-path="scores/expedition 33 clair obscur/verso - clair obscur.mxl">Verso</div>
+
+            <div class="score-column">
+              <!-- Column 2: Grades -->
+              <div class="folder">
+                <div class="folder-name">Grade Initial</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-initial/dance-gurlitt-initial-grade-piano-exam-pieces-2025-2026.mxl">Dance - Gurlitt</div>
+                  <div class="score-item" data-path="scores/grade-initial/melody-in-g-beyer-initial-grade-piano-exam-pieces-2025-2026.mxl">Melody in G - Beyer</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Grade 1</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-1/a-song-of-erin-dunhill-grade-1-piano-exam-pieces-2025-2026.mxl">A Song of Erin - Dunhill</div>
+                  <div class="score-item" data-path="scores/grade-1/four-1st-grade-pieces-both-clefs-3-tyrolienne-a-ehmant.mxl">Tyrolienne - Ehmant</div>
+                  <div class="score-item" data-path="scores/grade-1/melody-in-f-kohler-grade-1-piano-exam-pieces-2025-2026.mxl">Melody in F - Köhler</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Grade 2</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-2/arabesque-burgmuller-grade-2-piano-exam-pieces-2019-2020.mxl">Arabesque - Burgmüller</div>
+                  <div class="score-item" data-path="scores/grade-2/ecossaise-in-g-beethoven-grade-2-piano-exam-pieces-2023-2024.mxl">Ecossaise in G - Beethoven</div>
+                  <div class="score-item" data-path="scores/grade-2/moderato-beethoven-grade-2-piano-exam-pieces-2025-2026.mxl">Moderato - Beethoven</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Grade 3</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-3/allegretto-bartok-grade-3-piano-exam-pieces-2025-2026.mxl">Allegretto - Bartók</div>
+                  <div class="score-item" data-path="scores/grade-3/allegro-in-f-mozart-grade-3-piano-exam-pieces-2025-2026.mxl">Allegro in F - Mozart</div>
+                  <div class="score-item" data-path="scores/grade-3/angelic-harmony-burgmuller-grade-3-piano-exam-pieces-2017-2018.mxl">Angelic Harmony - Burgmüller</div>
+                  <div class="score-item" data-path="scores/grade-3/gavotte-in-g-handel-grade-3-piano-exam-pieces-2021-2022.mxl">Gavotte in G - Handel</div>
+                  <div class="score-item" data-path="scores/grade-3/innocence-burgmuller-grade-3-piano-exam-pieces-2021-2022.mxl">Innocence - Burgmüller</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Grade 4</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-4/allegro-assai-beethoven-grade-4-piano-exam-pieces-2025-2026.mxl">Allegro Assai - Beethoven</div>
+                  <div class="score-item" data-path="scores/grade-4/allegro-scherzando-in-f-haydn-grade-4-piano-exam-pieces-2025-2026.mxl">Allegro Scherzando in F - Haydn</div>
+                  <div class="score-item" data-path="scores/grade-4/ballade-burgmuller-grade-4-piano-exam-pieces-2025-2026.mxl">Ballade - Burgmüller</div>
+                  <div class="score-item" data-path="scores/grade-4/dedicatoria-granados-grade-4-piano-exam-pieces-2025-2026.mxl">Dedicatoria - Granados</div>
+                  <div class="score-item" data-path="scores/grade-4/exercise-in-b-flat-czerny-grade-4-piano-exam-pieces-2015-2016.mxl">Exercise in B Flat - Czerny</div>
+                  <div class="score-item" data-path="scores/grade-4/presto-g-b-pescetti-grade-4-piano-exam-pieces-2023-2024.mxl">Presto - Pescetti</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Grade 5</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-5/la-chevaleresque-burgmuller-grade-5-piano-exam-pieces-2021-2022.mxl">La Chevaleresque - Burgmüller</div>
+                  <div class="score-item" data-path="scores/grade-5/la-huerfana-granados-grade-5-piano-exam-pieces-2025-2026.mxl">La Huérfana - Granados</div>
+                  <div class="score-item" data-path="scores/grade-5/la-tarentelle-burgmuller-grade-5-piano-exam-pieces-2025-2026.mxl">La Tarentelle - Burgmüller</div>
+                  <div class="score-item" data-path="scores/grade-5/spiritoso-clementi-grade-5-piano-exam-pieces-2025-2026.mxl">Spiritoso - Clementi</div>
+                  <div class="score-item" data-path="scores/grade-5/waltz-in-b-minor-schubert-grade-5-piano-exam-pieces-2025-2026.mxl">Waltz in B Minor - Schubert</div>
+                </div>
+              </div>
+              <div class="folder">
+                <div class="folder-name">Grade 6</div>
+                <div class="folder-contents">
+                  <div class="score-item" data-path="scores/grade-6/vals-poetico-no-5-granados-grade-6-piano-exam-pieces-2005-2006.mxl">Vals Poético No. 5 - Granados</div>
+                  <div class="score-item" data-path="scores/grade-6/vals-poetico-no-6-granados-grade-6-piano-exam-pieces-2023-2024.mxl">Vals Poético No. 6 - Granados</div>
+                </div>
               </div>
             </div>
-            <div class="folder">
-              <div class="folder-name">Misc</div>
-              <div class="folder-contents">
-                <div class="score-item" data-path="scores/misc/super-mario-bros-ost.mxl">Super Mario Bros Collection</div>
-              </div>
-            </div>
-            <div class="folder">
+
+            <div class="score-column">
+              <!-- Column 3: MuseTrainer -->
+              <div class="folder">
               <div class="folder-name">MuseTrainer Collection</div>
               <div class="folder-contents">
                 <div class="score-item" data-path="scores/musetrainer/12_Variations_of_Twinkle_Twinkle_Little_Star.mxl">12 Variations of Twinkle Twinkle Little Star</div>
